--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <section class="product-list">
             <h4>Produtos mais vistos</h4>
             <h5>Campeões de visualização da nossa loja.</h5>
-            <div class="products-area">
+            <div class="products-area" id="products-area">
                 <div class="product-item">
                     <a href="./product.html">
                         <div class="product-photo">
@@ -179,7 +179,7 @@
         <section class="product-list">
             <h4>Produtos mais vendidos</h4>
             <h5>Campeões de vendas da nossa loja.</h5>
-            <div class="products-area">
+            <div class="products-area" id="products-seen">
                 <div class="product-item">
                     <a href="./product.html">
                         <div class="product-photo">
@@ -306,4 +306,5 @@
 <script type="text/javascript" src="./assets/js/header.js"></script>
 <script type="text/javascript" src="./assets/js/footer.js"></script>
 <script type="text/javascript" src="./assets/js/home.js"></script>
+<script type="text/javascript" src="./Assets/js/backProdutos.js"></script>
 </html>
