--- a/login.html
+++ b/login.html
@@ -59,13 +59,12 @@
             placeholder="O que você procura?"/>
         </div>
     </header>
-
-
-
+    <!-- VAI TER CONTEUDO AQUI -->
     <footer>
         <div class="footer-menu">
-            <a href="" class="logo">
-                <img src="./assets/images/ui/logo-white.png" alt="DEVstore">
+            <a class="logo" href="">
+                <img src="./assets/images/ui/logo-white.png"
+                alt="DEVstore"/>
             </a>
             <ul>
                 <li><a href="./produtos.html">Camisetas</a></li>
@@ -78,41 +77,43 @@
             <div class="contacts">
                 <div class="footer-title">Precisa de ajuda?</div>
                 <div class="footer-icons">
-                    <a href="" class="btn-icon-text">
-                        <img src="./assets/images/ui/mail-line.png" alt="">
+                    <a class="btn-icon-text" href="">
+                        <img src="./assets/images/ui/mail-line.png"/>
                         <span>devstore@email.com</span>
                     </a>
-                    <a href="" class="btn-icon-text">
-                        <img src="./assets/images/ui/phone-line.png" alt="">
-                        <span>(00) 000000-0000</span>
+                    <a class="btn-icon-text" href="">
+                        <img src="./assets/images/ui/phone-line.png"/>
+                        <span>(00)0000-0000</span>
                     </a>
                 </div>
             </div>
             <div class="social">
-                <div class="footer-title">Acompanhe nas redes sociais</div>
+                <div class="footer-title">Acompanhe nas redes
+                sociais</div>
                 <div class="footer-icons">
                     <a href="" class="btn-icon">
-                        <img src="./assets/images/ui/instagram-line.png" alt="">
+                        <img src="./assets/images/ui/instagram-line.png"/>
                     </a>
                     <a href="" class="btn-icon">
-                        <img src="./assets/images/ui/linkedin-line.png" alt="">
+                        <img src="./assets/images/ui/linkedin-line.png"/>
                     </a>
                     <a href="" class="btn-icon">
-                        <img src="./assets/images/ui/facebook-line.png" alt="">
+                        <img src="./assets/images/ui/facebook-line.png"/>
                     </a>
                     <a href="" class="btn-icon">
-                        <img src="./assets/images/ui/twitter-x-fill.png" alt="">
+                        <img src="./assets/images/ui/twitter-x-fill.png"/>
                     </a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <div class="btn-icon">
-                <img src="./assets/images/ui/arrow-up-line.png" alt="">
+                <img src="./assets/images/ui/arrow-up-line.png"/>
             </div>
         </div>
     </footer>
 </body>
+ 
 <script type="text/javascript" src="./assets/js/header.js"></script>
 <script type="text/javascript" src="./assets/js/footer.js"></script>
 <script type="text/javascript" src="./assets/js/home.js"></script>
